Add new enemy: Spiky Wall Trap

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/sunDalik/Playable.git"
   },
-  "author": "",
+  "author": "Dali Nesterov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sunDalik/Playable/issues"
