--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
   },
   "homepage": "https://github.com/sunDalik/Playable#readme",
   "devDependencies": {
-    "pixi-filters": "^3.0.3",
-    "rollup": "^1.26.5",
+    "pixi-filters": "^3.1.1",
+    "pixi.js": "^5.2.1",
+    "rollup": "^1.32.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.2"
+    "rollup-plugin-terser": "^5.3.0"
   },
-  "dependencies": {
-    "pixi.js": "^5.1.5"
-  }
+  "dependencies": {}
 }
